css/main.css
/* ... */
.press-characters img {
    width: 400px;
}

.info-page section{
    text-align: left;
}

.info-page h2 {
    text-align: center;
}

.about-us-tag p {
    text-align: left;
}

.footer-nav {
    display: none;
}

.contact-section-footer {
    padding: 20px 0;
}

.social-media {
    display: inline-block;
    vertical-align: top;
    margin: 0 1%;
}

.social-media img {
    width: 40px; 
}

.contact-link-footer {
    display: inline-block;
    font-size: 1.5rem;
    color: #545454;
    margin: 0 1%;
    border-left: 1px solid #545454;
    padding: 8px 3%;

}

.contact-link-footer a {
    color: black;
    text-decoration: none;
}

.contact-link-footer a:hover {
    text-decoration: underline;
}

.fixed-footer {
    bottom: 0;
    position: fixed;
    width: 100%;
}

/* ===============
    ALL: IE Fixes
   =============== */

.ie7 .title {
    padding-top: 20px;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */















/* ==========================================================================
   Media Queries
   ========================================================================== */

@media only screen and (min-width: 481px) and (orientation:portrait) {

/* ====================
    INTERMEDIATE: Menu
   ==================== */
   .header-container {
    position: fixed;
    width: 100%;
   }

    nav {
        width: 103%;
    }

    nav a {
        float: left;
        width: 16%;
        margin: 0 1%;
        padding: 15px 1%;
        margin-bottom: 10px;
    }

    nav li:first-child a {
        margin-left: 0;
    }

    nav li:last-child a {
        margin-right: 0;
    }

    .sub-menu {
        display: none;
        position: fixed;
        text-align: center;
        width: 100%;
        background-color: rgba(89, 89, 89, 0.9);
        margin: 0;
        padding: 8px 0 0 0;
        border-top: 1px solid #446C45;
        border-bottom: none;
    }

    .sub-menu ul {
        margin: 0;
    }

    .sub-menu li {
        display: inline-block;
        vertical-align: top;
        margin: 0 1.5%;
    }

    .sub-menu a {
        width: 100%;
        color: white;
        font-size: 1.1rem;
        letter-spacing: 0.8px;
        font-family: 'Patrick Hand', helvetica;
        text-shadow: none;
        padding: 0 0 2px 0;
        margin-bottom: 0;
    }

    .sub-menu a:visited {
        color: white;
    }

    .sub-menu-fixed {
        position: fixed;
        margin-bottom: 40px;
        background-color: rgba(89, 89, 89, 0.9);
    }

    .main {
        padding: 180px 0 0 0;
    }

    .books-tag {
        margin-top: 10px;
    }

    .sub-menu span {
        color: #FCAA36;
    }

    .books-menu li {
        border-right: 1px solid white;
        margin: 0;
        padding: 0 2% 0 0.7%;
    }

    .books-menu li:last-child {
        border-right: none;
    }

    .min-height-tags {
        min-height: 617px;
    }

    .home-tag {
        padding-bottom: 180px
    }

    .home-title {
        font-size: 104px;
    }

    .img-container {
        margin: -160px 0 -150px 0;
    }

    .book-section, .profile-section {
        display: inline-block;
        vertical-align: top;
        width: 280px;
        margin: 0 auto;
    }

    .book-section p {
        text-align: left;
    }

  

    .press-characters {
        margin: 0 0 -193px 0;
    }

    .press-characters img {
        width: 480px;
    }

    .overlay-navigation-pics {
        width: 26%;
    }

    .overlay-books {
        margin: 30px 0;
        width: 32%;
    }

    .overlay-books img {
        box-shadow: 4px 4px 2px grey;
    }

    .footer-nav {
        width: 98%;
        margin: 0 auto;
        display: block;
        color: #545454;
    }

    .footer-nav ul {
        text-align: center;
        padding: 0 20px;
        height: 40px;

    }

    .footer-nav a{
        margin: 0;
        width: 18%;
        font-size: 1.245rem;
        margin-bottom: 34px;
    }

/* ========================
    INTERMEDIATE: IE Fixes
   ======================== */

    nav ul li {
        display: inline;
    }

    .oldie nav a {
        margin: 0 0.7%;
    }
}
/* ... */

